changed to postgres and updated aws s3 access

--- a/config/s3.yml
+++ b/config/s3.yml
@@ -1,15 +1,10 @@
 development:
   access_key_id: "AKIAJDT7QLBNBTMDHJBA"
   secret_access_key: "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"
-  url: "XXX.s3.amazonaws.com"
 test:
   access_key_id: "AKIAJDT7QLBNBTMDHJBA"
   secret_access_key: "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"
-  url: "XXX.s3.amazonaws.com"
 production:
   access_key_id: "AKIAJDT7QLBNBTMDHJBA"
   secret_access_key: "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"
-  url: "XXX.s3.amazonaws.com"
-
-
-#'nal.s3-website-eu-west-1.amazonaws.com
+#TODO add correct security credentials
