--- a/config/database.yml
+++ b/config/database.yml
@@ -6,34 +6,25 @@
 # And be sure to use new-style password hashing:
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
 development:
-  adapter: mysql2
-  encoding: utf8
-  reconnect: false
-  database: cenatus-cms_development
-  pool: 5
-  username: root
-  password:
-  socket: /tmp/mysql.sock
+    adapter: postgresql
+    database: database_name
+    username: user_name
+    pool: 5
+
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: mysql2
-  encoding: utf8
-  reconnect: false
-  database: cenatus-cms_test
-  pool: 5
-  username: root
-  password:
-  socket: /tmp/mysql.sock
+    adapter: postgresql
+    database: database_name
+    username: user_name
+    pool: 5
 
 production:
-  adapter: mysql2
-  encoding: utf8
-  reconnect: false
-  database: cenatus-cms_production
-  pool: 5
-  username: root
-  password:
-  socket: /tmp/mysql.sock
+    adapter: postgresql
+    database: database_name
+    username: user_name
+    pool: 5
+
+#TODO change database and username
